--- a/consumer/src/main/resources/application.properties
+++ b/consumer/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=8080
 #dubbo config
 spring.dubbo.application.name=demo-consumer
-spring.dubbo.registry.address=multicast://224.5.6.7:1234
+spring.dubbo.registry.address=zookeeper://192.168.31.35:2181
 spring.dubbo.scan=com.imooc.springboot.dubbo.demo.consumer
+
+spring.dubbo.provider.filter=cf
