--- a/consumer/src/main/resources/application.properties
+++ b/consumer/src/main/resources/application.properties
@@ -1,7 +1,13 @@
 server.port=8080
 #dubbo config
 spring.dubbo.application.name=demo-consumer
-spring.dubbo.registry.address=zookeeper://192.168.31.35:2181
+spring.dubbo.registry.address=zookeeper://123.206.232.191:2181
 spring.dubbo.scan=com.imooc.springboot.dubbo.demo.consumer
 
 spring.dubbo.provider.filter=cf
+
+spring.datasource.url=jdbc:mysql://123.206.232.191:3306/zgl_dataBase?useUnicode=true&useSSL=false&characterEncoding=utf8&rewriteBatchedStatements=true
+spring.datasource.username=root
+spring.datasource.password=123456Ab
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
