--- a/provider/src/main/resources/application.properties
+++ b/provider/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.dubbo.application.name=demo-provider
-spring.dubbo.registry.address=multicast://224.5.6.7:1234
+spring.dubbo.registry.address=zookeeper://123.206.232.191:2181
 spring.dubbo.protocol.name=dubbo
 spring.dubbo.protocol.port=20880
 spring.dubbo.scan=com.imooc.springboot.dubbo.demo.provider
+
+spring.dubbo.provider.filter=pf
